# simplegql

./: Cargo.toml  LICENSE-APACHE2.0  LICENSE-MIT  README.md
src/: handlers.rs  lib.rs  main.rs  parsing.rs  sqlite_db.rs  utils.rs
src/sqlite_db/: handlers.rs  prepare.rs
src/sqlite_db/handlers/: utils.rs
tests/: sqlite_prefilled.rs
