[package]
name = "simplegql"
version = "0.1.0"
edition = "2021"
authors = ["Danny Cocks <daniel.cocks@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.8", features = ["dynamic-schema"] }
async-graphql-poem = "5.0.8"
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive"] }
graphql-parser = "0.4.0"
itertools = "0.10.5"
jsonwebtoken = "8.3.0"
poem = "1.3.55"
rand = "0.8.5"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.95"
sqlite = "0.30.4"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "parking_lot"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
